RIC-973 Policy status notification handling - initial rollup
